# polymbappe

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  WorldCup2026_Prediction_Accuracy (2).xlsx  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
configs/: autotuner_search_space.yaml  ko_winner_overrides.yaml  team_aliases.yaml  tournament_2026.yaml
data/outputs/: agent_changelog.parquet  autotune_leaderboard.parquet  champion_trajectory.parquet  contextual_attribution.parquet  edges.parquet  group_probabilities.parquet  knockout_bracket.parquet  knockout_predictions.parquet  match_predictions.parquet  stage_probabilities.parquet
data/processed/: match_xg.parquet  matches.parquet
data/raw/: player_attributes_kaggle.txt  polymarket_query.txt  squad_valuations_kaggle.txt
docs/: architecture.md  model-flow.mmd  results.md
docs/superpowers/specs/: 2026-06-06-polymbappe-unified-spec.md  2026-06-09-data-ingestion-requirements-spec.md
notebooks/: 04_backtest_report.ipynb  05_tournament_predictions.ipynb  06_live_dashboard.ipynb
scripts/: download_football_data.py  generate_elo_odds.py
src/polymbappe/: __init__.py  __main__.py  cli.py  config.py
src/polymbappe/agent/: __init__.py  graph.py  nodes.py  scheduler.py  sources.py  state.py
src/polymbappe/context/: __init__.py  adaptive.py  adjuster.py  cohesion.py  draw_pressure.py  fatigue.py  manager.py  ppda.py  runtime.py  sentiment.py  wc2026_hook.py
src/polymbappe/dashboard/: __init__.py  app.py  cache.py  data.py
src/polymbappe/dashboard/components/: __init__.py  charts.py
src/polymbappe/dashboard/pages/: __init__.py  agent_activity.py  knockout_bracket.py  market_edges.py  match_predictor.py  model_showcase.py  overview.py  predictions_vs_actuals.py  retrospective.py  team_deep_dive.py  upset_watch.py
src/polymbappe/data/: __init__.py  aliases.py  ingest.py  normalize.py  schema.py  sources.py  store.py  tables.py
src/polymbappe/eval/: backtest.py  base_probs.py  bookmaker.py  market.py  metrics.py  report.py  retrospective.py  significance.py  trajectory.py
src/polymbappe/features/: context.py  elo.py  pipeline.py  players.py  squad.py  xg.py
src/polymbappe/models/: __init__.py  _lgbm.py  base.py  bayesian_dc.py  dixon_coles.py  ensemble.py  gbm.py  meta.py  train.py
src/polymbappe/polymarket/: __init__.py  adapter.py
src/polymbappe/simulate/: __init__.py  bracket.py  group.py  knockout_bracket.py  knockout_predictions.py  match.py  real_bracket.py  structure.py  third_place.py  tournament.py
src/polymbappe/tune/: __init__.py  leaderboard.py  llm_search.py  objective.py  optuna_tuner.py  runner.py  search_space.py
tests/: test_adjuster.py  test_agent.py  test_aliases.py  test_bayesian_dc.py  test_bayesian_wiring.py  test_bracket.py  test_context.py  test_dashboard.py  test_dashboard_data.py  test_dixon_coles.py  test_edges_cli.py  test_ensemble.py  test_eval_extended.py  test_features.py  test_gbm.py  test_group_tiebreakers.py  test_ingest.py  test_knockout_bracket.py  test_market_odds_integration.py  test_mvm.py  test_normalize.py  test_outright_edges.py  test_players.py  test_real_bracket.py  test_retrospective.py  test_simulate_match.py  test_sources_cache.py  test_store.py  test_third_place_ranking.py  test_tournament.py  test_tournament_structure.py  test_train.py  test_trajectory.py  test_tune.py
