[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "polymbappe"
version = "0.1.0"
description = "Probabilistic forecasting model for the 2026 FIFA World Cup"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "duckdb>=1.0.0",
  "numpy>=1.26.0",
  "polars>=1.8.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "requests>=2.32.0",
  "scipy>=1.14.0",
  "soccerdata>=1.8.7",
  "structlog>=24.4.0",
  "typer>=0.12.3",
]

[project.optional-dependencies]
modeling = [
  "lightgbm>=4.5.0",
  "pymc>=5.17.0",
  "scikit-learn>=1.4.0",
  "optuna>=3.6.0",
  "shap>=0.45.0",
]
context = [
  "langgraph>=0.2.0",
  "langchain-community>=0.3.0",
  "apscheduler>=3.10.0",
  "praw>=7.7.0",
  "vaderSentiment>=3.3.0",
  "ollama>=0.4.0",
]
dashboard = [
  "streamlit>=1.38.0",
  "plotly>=5.22.0",
]
dev = [
  "black>=24.8.0",
  "mypy>=1.11.1",
  "pre-commit>=3.8.0",
  "pytest>=8.3.2",
  "ruff>=0.6.2",
]

[project.scripts]
polymbappe = "polymbappe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/polymbappe"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["polymbappe"]

[[tool.mypy.overrides]]
module = ["requests", "scipy", "scipy.*", "soccerdata", "soccerdata.*", "sklearn", "sklearn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
